@@ -1468,6 +1468,10 @@ class __(object, metaclass=MagicType):
         return cls.graph_traversal(None, None, Bytecode()).min_(*args)
 
     @classmethod
+    def none(cls, *args):
+        return cls.graph_traversal(None, None, Bytecode()).none(*args)
+
+    @classmethod
     def not_(cls, *args):
         return cls.graph_traversal(None, None, Bytecode()).not_(*args)
 
@@ -1943,6 +1947,10 @@ def dedup(*args):
     return __.dedup(*args)
 
 
+def disjunct(*args):
+    return __.disjunct(*args)
+
+
 def drop(*args):
     return __.drop(*args)
 
@@ -2145,6 +2153,10 @@ def merge_v(*args):
 
 def min_(*args):
     return __.min_(*args)
+
+
+def none(*args):
+    return __.none(*args)
 
 
 def not_(*args):
@@ -2435,6 +2447,8 @@ statics.add_static('date_diff', date_diff)
 
 statics.add_static('dedup', dedup)
 
+statics.add_static('disjunct', disjunct)
+
 statics.add_static('drop', drop)
 
 statics.add_static('element', element)
@@ -2534,6 +2548,8 @@ statics.add_static('merge_e', merge_e)
 statics.add_static('merge_v', merge_v)
 
 statics.add_static('min_', min_)
+
+statics.add_static('none', none)
 
 statics.add_static('not_', not_)
 
