@@ -288,6 +288,12 @@ world.gremlins = {
     'g_V_valuesXageX_isXgte_29X_isXlt_34X': [(lambda g:g.V().age.is_(P.gte(29)).is_(P.lt(34)))], 
     'g_V_whereXinXcreatedX_count_isX1XX_valuesXnameX': [(lambda g:g.V().where(__.in_('created').count().is_(1)).name)], 
     'g_V_whereXinXcreatedX_count_isXgte_2XX_valuesXnameX': [(lambda g:g.V().where(__.in_('created').count().is_(P.gte(2))).name)], 
+    'g_V_none': [(lambda g:g.V().none())], 
+    'g_V_none_none': [(lambda g:g.V().none().none())], 
+    'g_V_none_fold': [(lambda g:g.V().none().fold())], 
+    'g_V_none_fold_none': [(lambda g:g.V().none().fold().none())], 
+    'g_V_none_fold_constantX1X': [(lambda g:g.V().none().fold().constant(1))], 
+    'g_V_projectXxX_byXcoalesceXage_isXgtX29XX_noneXX_selectXxX': [(lambda g:g.V().project('x').by(__.coalesce(__.age.is_(P.gt(29)),__.none())).select('x'))], 
     'g_V_orXhasXage_gt_27X__outE_count_gte_2X_name': [(lambda g:g.V().or_(__.has('age',P.gt(27)),__.outE().count().is_(P.gte(2))).name)], 
     'g_V_orXoutEXknowsX__hasXlabel_softwareX_or_hasXage_gte_35XX_name': [(lambda g:g.V().or_(__.outE('knows'),__.has(T.label,'software').or_().has('age',P.gte(35))).name)], 
     'g_V_asXaX_orXselectXaX_selectXaXX': [(lambda g:g.V().as_('a').or_(__.select('a'),__.select('a')))], 
