@@ -33,6 +33,8 @@ image::https://raw.githubusercontent.com/apache/tinkerpop/master/docs/static/ima
 * Fixed bug in `TinkerTransactionGraph` where a read-only transaction may leave elements trapped in a "zombie transaction".
 * Fixed bug in `gremlin.sh` where it couldn't accept a directory name containing spaces.
 * Fixed issue in `gremlin-console` where it couldn't accept plugin files that included empty lines or invalid plugin names.
+* Modified grammar to make `none()` usage more consistent as a filter step where it can now be used to chain additional traversal steps and be used anonymously.
+* Added missing anonymous support for `disjunct()` in Python and Javascript.
 
 [[release-3-7-3]]
 === TinkerPop 3.7.3 (October 23, 2024)
